k8s/chat-4000.yaml
# k8s/chat-4000.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-server-4000
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-4000
  template:
    metadata:
      labels:
        app: chat-4000
    spec:
      containers:
        - name: chat-4000
          image: socket_learning-chat_server_1:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: chat-service-4000
spec:
  ports:
    - port: 4000
      targetPort: 4000
  selector:
    app: chat-4000
