k8s/chat-4001.yaml
# k8s/chat-4000.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-server-4001
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-4001
  template:
    metadata:
      labels:
        app: chat-4001
    spec:
      containers:
        - name: chat-4001
          image: socket_learning-chat_server_1:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: chat-service-4001
spec:
  ports:
    - port: 4001
      targetPort: 4001
  selector:
    app: chat-4001
